# empty-plugin-cmake

./: .gitignore  CMakeLists.txt  README.md  package.py
src/: CMakeLists.txt  CMakeSettings.json  main.cpp
